--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
+---
+layout: page
+title: Projects
+permalink: /Projets/
+---
+
+
+
 title: "Fatma Amor - Data Analyst"
 description: "Portfolio & Projects"
 theme: jekyll-theme-slate
